--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-06 Mon 22:15]
+#+CAPTION: Clock summary at [2017-03-06 Mon 22:19]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *4:25* |      |      | 100.0 |
+| *Total time*                                                                | *4:34* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 4:25   |      |      | 100.0 |
-| Active                                                                      |        | 4:25 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:16 |   6.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:26 |   9.8 |
-| COMPLETED Add test model for path meta-data                                 |        |      | 2:49 |  63.8 |
-| STARTED Build on tags for Windows                                           |        |      | 0:15 |   5.7 |
-| STARTED Add a "flat directory" mode                                         |        |      | 0:08 |   3.0 |
-| STARTED Split include and source directories                                |        |      | 0:31 |  11.7 |
+| Stories                                                                     | 4:34   |      |      | 100.0 |
+| Active                                                                      |        | 4:34 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:16 |   5.8 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:26 |   9.5 |
+| COMPLETED Add test model for path meta-data                                 |        |      | 2:58 |  65.0 |
+| STARTED Build on tags for Windows                                           |        |      | 0:15 |   5.5 |
+| STARTED Add a "flat directory" mode                                         |        |      | 0:08 |   2.9 |
+| STARTED Split include and source directories                                |        |      | 0:31 |  11.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -92,6 +92,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 
 *** COMPLETED Add test model for path meta-data                       :story:
     CLOSED: [2017-03-06 Mon 22:15]
+    CLOCK: [2017-03-06 Mon 22:10]--[2017-03-06 Mon 22:19] =>  0:09
     CLOCK: [2017-03-06 Mon 21:02]--[2017-03-06 Mon 22:09] =>  1:07
     CLOCK: [2017-03-06 Mon 20:36]--[2017-03-06 Mon 20:42] =>  0:06
     CLOCK: [2017-03-06 Mon 20:21]--[2017-03-06 Mon 20:35] =>  0:14
