--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,20 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-06 Mon 22:19]
+#+CAPTION: Clock summary at [2017-03-06 Mon 22:32]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *4:34* |      |      | 100.0 |
+| *Total time*                                                                | *4:45* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 4:34   |      |      | 100.0 |
-| Active                                                                      |        | 4:34 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:16 |   5.8 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:26 |   9.5 |
-| COMPLETED Add test model for path meta-data                                 |        |      | 2:58 |  65.0 |
-| STARTED Build on tags for Windows                                           |        |      | 0:15 |   5.5 |
-| STARTED Add a "flat directory" mode                                         |        |      | 0:08 |   2.9 |
-| STARTED Split include and source directories                                |        |      | 0:31 |  11.3 |
+| Stories                                                                     | 4:45   |      |      | 100.0 |
+| Active                                                                      |        | 4:45 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:16 |   5.6 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:26 |   9.1 |
+| COMPLETED Add test model for path meta-data                                 |        |      | 2:58 |  62.5 |
+| STARTED Check for incompatibility between input language and enabled kernels |        |      | 0:11 |   3.9 |
+| STARTED Build on tags for Windows                                           |        |      | 0:15 |   5.3 |
+| STARTED Add a "flat directory" mode                                         |        |      | 0:08 |   2.8 |
+| STARTED Split include and source directories                                |        |      | 0:31 |  10.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -104,11 +105,22 @@ We are making use of directory and file settings, but we do not have
 any tests for it. Add a simple test model that exercises all settings
 in one go (at least those that are not mutually exclusive).
 
-*** Check for incomatibility between input language and enabled kernels :story:
+*** STARTED Check for incompatibility between input language and enabled kernels :story:
+    CLOCK: [2017-03-06 Mon 22:20]--[2017-03-06 Mon 22:31] =>  0:11
 
 At present it is possible to have a model with input language of say
 C++ but with the C# kernel enabled. We should throw if the input
 language is incompatible with the enabled kernels.
+
+Sadly this is not trivial. This is because quilt only sees the mapped
+models; thus as far as knit is concerned, we ask for the input
+language (e.g. c++) and there is an enabled kernel for it. We don't
+look at it from the enabled kernel's perspective (e.g. "C# is enabled,
+why is there no input language for it?"). We could have a method in
+quilt that returns all enabled kernels; we could then look at all
+models we are going to build and if there is a mismatch we can
+throw. But extracting the =configuration_factory= out of quilt
+workflow is not going to be easy without screwing up the API.
 
 *** STARTED Build on tags for Windows                                 :story:
     CLOCK: [2017-03-06 Mon 12:01]--[2017-03-06 Mon 12:16] =>  0:15
@@ -197,9 +209,6 @@ model due to this problem:
 : #DOGEN quilt.cpp.source_directory_name=some_source_dir
 : #DOGEN quilt.cpp.include_directory_name=some_include_dir
 : #DOGEN quilt.cpp.odb.directory=odb_dir
-
-
-
 
 *** Add =targetver.h= support                                         :story:
 
