--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,21 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-06 Mon 22:32]
+#+CAPTION: Clock summary at [2017-03-07 Tue 08:26]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *4:45* |      |      | 100.0 |
+| *Total time*                                                                | *5:16* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 4:45   |      |      | 100.0 |
-| Active                                                                      |        | 4:45 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:16 |   5.6 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:26 |   9.1 |
-| COMPLETED Add test model for path meta-data                                 |        |      | 2:58 |  62.5 |
-| STARTED Check for incompatibility between input language and enabled kernels |        |      | 0:11 |   3.9 |
-| STARTED Build on tags for Windows                                           |        |      | 0:15 |   5.3 |
-| STARTED Add a "flat directory" mode                                         |        |      | 0:08 |   2.8 |
-| STARTED Split include and source directories                                |        |      | 0:31 |  10.9 |
+| Stories                                                                     | 5:16   |      |      | 100.0 |
+| Active                                                                      |        | 5:16 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:16 |   5.1 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:26 |   8.2 |
+| COMPLETED Add test model for path meta-data                                 |        |      | 2:58 |  56.3 |
+| STARTED Check for incompatibility between input language and enabled kernels |        |      | 0:11 |   3.5 |
+| STARTED Build on tags for Windows                                           |        |      | 0:15 |   4.7 |
+| STARTED Add a "flat directory" mode                                         |        |      | 0:08 |   2.5 |
+| STARTED Split include and source directories                                |        |      | 0:31 |   9.8 |
+| STARTED ODB CMakeLists does not cope with changes to project paths          |        |      | 0:31 |   9.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -185,7 +186,8 @@ folders on non-split projects. This means that the header files for
 split projects won't be packaged up. It also means that for ODB
 projects we won't get the ODB targets.
 
-*** ODB CMakeLists does not cope with changes to project paths        :story:
+*** STARTED ODB CMakeLists does not cope with changes to project paths :story:
+    CLOCK: [2017-03-07 Tue 07:55]--[2017-03-07 Tue 08:26] =>  0:31
 
 We have hard-coded the path to the ODB directory in the CMakeLists
 file. This means that when we update the path to a different include,
