--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,22 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-07 Tue 08:26]
+#+CAPTION: Clock summary at [2017-03-07 Tue 10:05]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *5:16* |      |      | 100.0 |
+| *Total time*                                                                | *6:54* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 5:16   |      |      | 100.0 |
-| Active                                                                      |        | 5:16 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:16 |   5.1 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:26 |   8.2 |
-| COMPLETED Add test model for path meta-data                                 |        |      | 2:58 |  56.3 |
-| STARTED Check for incompatibility between input language and enabled kernels |        |      | 0:11 |   3.5 |
-| STARTED Build on tags for Windows                                           |        |      | 0:15 |   4.7 |
-| STARTED Add a "flat directory" mode                                         |        |      | 0:08 |   2.5 |
-| STARTED Split include and source directories                                |        |      | 0:31 |   9.8 |
-| STARTED ODB CMakeLists does not cope with changes to project paths          |        |      | 0:31 |   9.8 |
+| Stories                                                                     | 6:54   |      |      | 100.0 |
+| Active                                                                      |        | 6:54 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:16 |   3.9 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:26 |   6.3 |
+| COMPLETED Add test model for path meta-data                                 |        |      | 2:58 |  43.0 |
+| STARTED Check for incompatibility between input language and enabled kernels |        |      | 0:11 |   2.7 |
+| STARTED Build on tags for Windows                                           |        |      | 0:15 |   3.6 |
+| STARTED Add a "flat directory" mode                                         |        |      | 0:08 |   1.9 |
+| STARTED Split include and source directories                                |        |      | 0:31 |   7.5 |
+| STARTED ODB CMakeLists does not cope with changes to project paths          |        |      | 2:09 |  31.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -187,6 +187,7 @@ split projects won't be packaged up. It also means that for ODB
 projects we won't get the ODB targets.
 
 *** STARTED ODB CMakeLists does not cope with changes to project paths :story:
+    CLOCK: [2017-03-07 Tue 08:27]--[2017-03-07 Tue 10:05] =>  1:38
     CLOCK: [2017-03-07 Tue 07:55]--[2017-03-07 Tue 08:26] =>  0:31
 
 We have hard-coded the path to the ODB directory in the CMakeLists
