--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,22 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-07 Tue 10:05]
+#+CAPTION: Clock summary at [2017-03-07 Tue 13:33]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *6:54* |      |      | 100.0 |
+| *Total time*                                                                | *9:18* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 6:54   |      |      | 100.0 |
-| Active                                                                      |        | 6:54 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:16 |   3.9 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:26 |   6.3 |
-| COMPLETED Add test model for path meta-data                                 |        |      | 2:58 |  43.0 |
-| STARTED Check for incompatibility between input language and enabled kernels |        |      | 0:11 |   2.7 |
-| STARTED Build on tags for Windows                                           |        |      | 0:15 |   3.6 |
-| STARTED Add a "flat directory" mode                                         |        |      | 0:08 |   1.9 |
-| STARTED Split include and source directories                                |        |      | 0:31 |   7.5 |
-| STARTED ODB CMakeLists does not cope with changes to project paths          |        |      | 2:09 |  31.2 |
+| Stories                                                                     | 9:18   |      |      | 100.0 |
+| Active                                                                      |        | 9:18 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:16 |   2.9 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:26 |   4.7 |
+| COMPLETED Add test model for path meta-data                                 |        |      | 2:58 |  31.9 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |        |      | 4:33 |  48.9 |
+| STARTED Check for incompatibility between input language and enabled kernels |        |      | 0:11 |   2.0 |
+| STARTED Build on tags for Windows                                           |        |      | 0:15 |   2.7 |
+| STARTED Add a "flat directory" mode                                         |        |      | 0:08 |   1.4 |
+| STARTED Split include and source directories                                |        |      | 0:31 |   5.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -105,6 +105,39 @@ For all other architectures and/or operative systems, you will need to build Dog
 We are making use of directory and file settings, but we do not have
 any tests for it. Add a simple test model that exercises all settings
 in one go (at least those that are not mutually exclusive).
+
+*** COMPLETED ODB CMakeLists does not cope with changes to project paths :story:
+    CLOSED: [2017-03-07 Tue 13:33]
+    CLOCK: [2017-03-07 Tue 13:18]--[2017-03-07 Tue 13:33] =>  0:15
+    CLOCK: [2017-03-07 Tue 12:40]--[2017-03-07 Tue 13:17] =>  0:37
+    CLOCK: [2017-03-07 Tue 11:39]--[2017-03-07 Tue 12:02] =>  0:23
+    CLOCK: [2017-03-07 Tue 11:03]--[2017-03-07 Tue 11:38] =>  0:35
+    CLOCK: [2017-03-07 Tue 10:06]--[2017-03-07 Tue 10:40] =>  1:31
+    CLOCK: [2017-03-07 Tue 08:27]--[2017-03-07 Tue 10:05] =>  1:38
+    CLOCK: [2017-03-07 Tue 07:55]--[2017-03-07 Tue 08:26] =>  0:31
+
+We have hard-coded the path to the ODB directory in the CMakeLists
+file. This means that when we update the path to a different include,
+source or ODB directory, the CMake file will fail. We need to add these
+locations to fabric's CMakeLists and use the locator to populate it.
+
+Notes:
+
+- injection is done before the quilt workflow, so we do not have a
+  locator handy. CMakeLists population will have to be a two-step
+  process. We could add a CMakeLists expander (or somesuch other name)
+  which is responsible for populating these directories.
+- we may need to split CMakeLists into two: include and source. We
+  don't need these parameters for source.
+- we need the include directory name, path to source and include ODB
+  directories and path to ODB options file.
+
+Parameters not tested in the =all_path_and_directory_settings.dia=
+model due to this problem:
+
+: #DOGEN quilt.cpp.source_directory_name=some_source_dir
+: #DOGEN quilt.cpp.include_directory_name=some_include_dir
+: #DOGEN quilt.cpp.odb.directory=odb_dir
 
 *** STARTED Check for incompatibility between input language and enabled kernels :story:
     CLOCK: [2017-03-06 Mon 22:20]--[2017-03-06 Mon 22:31] =>  0:11
@@ -185,33 +218,6 @@ At present we are only generating a cmakelists file for include
 folders on non-split projects. This means that the header files for
 split projects won't be packaged up. It also means that for ODB
 projects we won't get the ODB targets.
-
-*** STARTED ODB CMakeLists does not cope with changes to project paths :story:
-    CLOCK: [2017-03-07 Tue 08:27]--[2017-03-07 Tue 10:05] =>  1:38
-    CLOCK: [2017-03-07 Tue 07:55]--[2017-03-07 Tue 08:26] =>  0:31
-
-We have hard-coded the path to the ODB directory in the CMakeLists
-file. This means that when we update the path to a different include,
-source or ODB directory, the CMake file will fail. We need to add these
-locations to fabric's CMakeLists and use the locator to populate it.
-
-Notes:
-
-- injection is done before the quilt workflow, so we do not have a
-  locator handy. CMakeLists population will have to be a two-step
-  process. We could add a CMakeLists expander (or somesuch other name)
-  which is responsible for populating these directories.
-- we may need to split CMakeLists into two: include and source. We
-  don't need these parameters for source.
-- we need the include directory name, path to source and include ODB
-  directories and path to ODB options file.
-
-Parameters not tested in the =all_path_and_directory_settings.dia=
-model due to this problem:
-
-: #DOGEN quilt.cpp.source_directory_name=some_source_dir
-: #DOGEN quilt.cpp.include_directory_name=some_include_dir
-: #DOGEN quilt.cpp.odb.directory=odb_dir
 
 *** Add =targetver.h= support                                         :story:
 
