--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,22 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-07 Tue 14:07]
-| <75>                                                                        |        |      |      |       |
-| Headline                                                                    | Time   |      |      |     % |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *9:49* |      |      | 100.0 |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 9:49   |      |      | 100.0 |
-| Active                                                                      |        | 9:49 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:16 |   2.7 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:26 |   4.4 |
-| COMPLETED Add test model for path meta-data                                 |        |      | 2:58 |  30.2 |
-| COMPLETED ODB CMakeLists does not cope with changes to project paths        |        |      | 5:04 |  51.6 |
-| STARTED Check for incompatibility between input language and enabled kernels |        |      | 0:11 |   1.9 |
-| STARTED Build on tags for Windows                                           |        |      | 0:15 |   2.5 |
-| STARTED Add a "flat directory" mode                                         |        |      | 0:08 |   1.4 |
-| STARTED Split include and source directories                                |        |      | 0:31 |   5.3 |
+#+CAPTION: Clock summary at [2017-03-07 Tue 21:01]
+| <75>                                                                        |         |       |      |       |
+| Headline                                                                    | Time    |       |      |     % |
+|-----------------------------------------------------------------------------+---------+-------+------+-------|
+| *Total time*                                                                | *12:26* |       |      | 100.0 |
+|-----------------------------------------------------------------------------+---------+-------+------+-------|
+| Stories                                                                     | 12:26   |       |      | 100.0 |
+| Active                                                                      |         | 12:26 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:16 |   2.1 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:26 |   3.5 |
+| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |  23.9 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  40.8 |
+| STARTED Check for incompatibility between input language and enabled kernels |         |       | 0:11 |   1.5 |
+| STARTED Add a LAM test model just to validate existing functionality        |         |       | 1:48 |  14.5 |
+| STARTED Build on tags for Windows                                           |         |       | 0:15 |   2.0 |
+| STARTED Add a "flat directory" mode                                         |         |       | 0:08 |   1.1 |
+| STARTED Split include and source directories                                |         |       | 0:31 |   4.2 |
+| STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 0:49 |   6.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -240,6 +242,34 @@ At present we are only generating a cmakelists file for include
 folders on non-split projects. This means that the header files for
 split projects won't be packaged up. It also means that for ODB
 projects we won't get the ODB targets.
+
+*** STARTED Handling of visual studio projects and solutions is incorrect :story:
+    CLOCK: [2017-03-07 Tue 20:56]--[2017-03-07 Tue 21:00] =>  0:04
+    CLOCK: [2017-03-07 Tue 20:10]--[2017-03-07 Tue 20:55] =>  0:45
+
+At present we added the extension of the solution/project to the
+element name, e.g.:
+
+: all_path_and_directory_settings.csproj
+
+This happens to work for the simpler cases, but if we try to add a
+postfix we then have a problem:
+
+: dogen.test_models.all_path_and_directory_settings.csproj_vc15_
+
+Projects and solutions do not seem to fit our conceptual model for the
+element space. We need to somehow have distinct element IDs but yet
+not associate the extension with the name directly. Up to now we never
+had two distinct elements with the exact same name but generating two
+different artefacts with different extensions.
+
+This is a problem because we will need to have the ability to generate
+multiple project files for different versions of visual studio.
+
+For now we removed the project and solution postfixes:
+
+: #DOGEN quilt.csharp.visual_studio.solution.postfix=_vs15_
+: #DOGEN quilt.csharp.visual_studio.project.postfix=_vc15_
 
 *** Add =targetver.h= support                                         :story:
 
