--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,28 +13,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-07 Tue 21:23]
+#+CAPTION: Clock summary at [2017-03-07 Tue 21:36]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *12:48* |       |      | 100.0 |
+| *Total time*                                                                | *12:59* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 12:48   |       |      | 100.0 |
-| Active                                                                      |         | 12:48 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:38 |   4.9 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:26 |   3.4 |
-| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |  23.2 |
-| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  39.6 |
+| Stories                                                                     | 12:59   |       |      | 100.0 |
+| Active                                                                      |         | 12:59 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   6.3 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:26 |   3.3 |
+| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |  22.8 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  39.0 |
 | STARTED Check for incompatibility between input language and enabled kernels |         |       | 0:11 |   1.4 |
-| STARTED Add a LAM test model just to validate existing functionality        |         |       | 1:48 |  14.1 |
-| STARTED Build on tags for Windows                                           |         |       | 0:15 |   2.0 |
+| STARTED Add a LAM test model just to validate existing functionality        |         |       | 1:48 |  13.9 |
+| STARTED Build on tags for Windows                                           |         |       | 0:15 |   1.9 |
 | STARTED Add a "flat directory" mode                                         |         |       | 0:08 |   1.0 |
 | STARTED Split include and source directories                                |         |       | 0:31 |   4.0 |
-| STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 0:49 |   6.4 |
+| STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 0:49 |   6.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-03-07 Tue 21:31]--[2017-03-07 Tue 21:36] =>  0:05
+    CLOCK: [2017-03-07 Tue 21:24]--[2017-03-07 Tue 21:30] =>  0:06
     CLOCK: [2017-03-07 Tue 21:01]--[2017-03-07 Tue 21:23] =>  0:22
     CLOCK: [2017-03-06 Mon 10:33]--[2017-03-06 Mon 10:49] =>  0:16
 
@@ -272,6 +274,20 @@ For now we removed the project and solution postfixes:
 : #DOGEN quilt.csharp.visual_studio.solution.postfix=_vs15_
 : #DOGEN quilt.csharp.visual_studio.project.postfix=_vc15_
 
+*** Using underscores with C# results in invalid code                 :story:
+
+When building in LAM, if one uses underscore notation we create code
+like so:
+
+:        public int prop_0 { get; set; }
+:        public class_0(int prop_0)
+:        {
+:            prop_0 = prop_0;
+:        }
+
+C# thinks we're assigning the parameter to itself rather than making
+use of the property.
+
 *** Support containers correctly in annotations                       :story:
 
 At present we are allowing users to enter the same key multiple times
@@ -309,6 +325,25 @@ Notes:
 
 - [[http://json-schema.org/][JSON Schema]]
 - [[https://github.com/aspnet/Home/wiki/Project.json-file][Project.Json]]
+- yarn.dia.comment is no longer necessary, just look for the
+  markers.
+- we should only allow arrays of simple types.
+- the fragment used inside Dia should be identical to the file
+  supplied as argument for the one-off profile and it should also
+  identical to a fragment inside a project. Do we need to support both
+  projects and one-off profiles?
+
+Sample:
+
+#+begin_src
+  "annotation": {
+    "yarn.dia.comment": true,
+    "yarn.dia.external_modules": "dogen::test_models",
+    "annotations.profile": "dogen",
+    "yarn.input_language": "language_agnostic",
+    "yarn.output_language": [ "csharp", "cpp" ]
+#+end_src
+
 
 *** Add =targetver.h= support                                         :story:
 
