--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-08 Wed 10:09]
+#+CAPTION: Clock summary at [2017-03-08 Wed 11:38]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *13:26* |       |      | 100.0 |
+| *Total time*                                                                | *13:48* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 13:26   |       |      | 100.0 |
-| Active                                                                      |         | 13:26 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   6.1 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:26 |   3.2 |
-| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |  22.1 |
-| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  37.7 |
-| STARTED Check for incompatibility between input language and enabled kernels |         |       | 0:11 |   1.4 |
-| STARTED Add a LAM test model just to validate existing functionality        |         |       | 1:48 |  13.4 |
-| STARTED Build on tags for Windows                                           |         |       | 0:15 |   1.9 |
+| Stories                                                                     | 13:48   |       |      | 100.0 |
+| Active                                                                      |         | 13:48 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   5.9 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:26 |   3.1 |
+| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |  21.5 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  36.7 |
+| STARTED Check for incompatibility between input language and enabled kernels |         |       | 0:11 |   1.3 |
+| STARTED Add a LAM test model just to validate existing functionality        |         |       | 1:48 |  13.0 |
+| STARTED Build on tags for Windows                                           |         |       | 0:15 |   1.8 |
 | STARTED Add a "flat directory" mode                                         |         |       | 0:08 |   1.0 |
-| STARTED Split include and source directories                                |         |       | 0:58 |   7.2 |
-| STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 0:49 |   6.1 |
+| STARTED Split include and source directories                                |         |       | 1:20 |   9.7 |
+| STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 0:49 |   5.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -202,6 +202,7 @@ different top-level directories), which is nice.
 We should check that =enable_unique_file_names= is set to true.
 
 *** STARTED Split include and source directories                      :story:
+    CLOCK: [2017-03-08 Wed 11:16]--[2017-03-08 Wed 11:38] =>  0:22
     CLOCK: [2017-03-08 Wed 09:42]--[2017-03-08 Wed 10:09] =>  0:27
     CLOCK: [2017-03-06 Mon 16:30]--[2017-03-06 Mon 17:01] =>  0:31
 
