agile: backlog grooming

--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -36,6 +36,7 @@
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-03-09 Thu 07:10]--[2017-03-09 Thu 07:22] =>  0:12
     CLOCK: [2017-03-07 Tue 21:31]--[2017-03-07 Tue 21:36] =>  0:05
     CLOCK: [2017-03-07 Tue 21:24]--[2017-03-07 Tue 21:30] =>  0:06
     CLOCK: [2017-03-07 Tue 21:01]--[2017-03-07 Tue 21:23] =>  0:22
@@ -254,6 +255,7 @@ different top-level directories), which is nice.
 We should check that =enable_unique_file_names= is set to true.
 
 *** STARTED Handling of visual studio projects and solutions is incorrect :story:
+    CLOCK: [2017-03-09 Thu 06:39]--[2017-03-09 Thu 07:01] =>  0:22
     CLOCK: [2017-03-07 Tue 20:56]--[2017-03-07 Tue 21:00] =>  0:04
     CLOCK: [2017-03-07 Tue 20:10]--[2017-03-07 Tue 20:55] =>  0:45
 
@@ -280,6 +282,100 @@ For now we removed the project and solution postfixes:
 
 : #DOGEN quilt.csharp.visual_studio.solution.postfix=_vs15_
 : #DOGEN quilt.csharp.visual_studio.project.postfix=_vc15_
+
+In order to fit our conceptual model, we need to make some adjustments
+to our implementation of projects and solutions. First, there is only
+one meta-model element for *both* projects and solutions. This is
+derived from the fact that they both share a common name. The
+conceptual model does not involve file extensions - or file paths for
+that matter; archetypes exist only in archetype space, and their
+"paths" in this space are only related to the facets they belong
+to. The physical location is a property of files, which are
+expressions of archetypes in "file space". Thus, there is only one
+single element, provisionally called "visual studio", which has
+multiple archetypes (and their associated formatters):
+
+- solution
+- project
+
+Second, a solution and project may be instantiated multiple times,
+depending on the version of visual studio and the associated
+compiler. Externally users supply a visual studio version and that
+internally will map to different instances of the formatters. We must
+instantiate the formatters for each supported version because we may
+need to create multiple versions simultaneously: his is the use case
+where users want to generate projects and solutions for multiple
+versions of VS at the same time.
+
+THe good news is that we already have something similar: master
+includes. We can adapt a lot of the logic we have for master
+includes. There are some differences though:
+
+- we will have multiple instances on the same facet.
+- we need some external mechanism to determine if a given version is
+  enabled. We could force users to enter the "enabled" property for
+  each version in the meta-data, but that would get really messy since
+  there are only a few valid combinations of solution and project
+  version. Its better if users supply the Visual Studio versions and
+  we infer the solution and projects to enable. But we do not have a
+  mechanism for this at present. We could add a "is enabled" to
+  formatters like we did for helpers, supplying the element; we would
+  then check the Visual Studio version in the element and return false
+  if it didn't match the formatters version. Or we could change the
+  formatter's interface to return optional artefact. Whilst this is a
+  bit more painful - we'd have to change all formatters - it fits the
+  code structure slightly better.
+- we need to have different file names depending on the
+  version. Worse: if there is just a single version we do not need to
+  have a "version prefix". If there are multiple versions we need to
+  add the prefix. The fist use case is easy: we already have archetype
+  prefixes; we just need to add a prefix for each version. The second
+  part requires some hacking. We could have an option in locator:
+  "apply archetype postfix" supplied as an argument. Since we have the
+  Visual Studio element we have visibility of all enabled versions.
+
+
+*** Split out the file extension from the formatter                   :story:
+
+At present we have handled file extensions in one of two ways:
+
+- we baked them in into locator, dynamically: this is the case for
+  =hpp= and =cpp=, where locator is responsible for retrieving the
+  meta-data related to extensions.
+- we hacked them in into locator, statically: this is the case for
+  CMakeLists, where the =txt= is hard-coded in.
+- we hacked them in into the elements: this is the case for Visual
+  Studio solutions and projects.
+
+In reality, what we need is to create a separation between the
+archetype, the extension "kind" and the actual extension. All
+archetypes have a fixed "extension kind". For example, C++ headers
+will always have a C++ header extension even though the actual header
+extension used is not known. In other cases the extension kind has a
+fixed extension (CMakeLists, Visual Studio projects, solutions). At
+present this mapping is done via the multiple functions locator
+supplies.
+
+We could conceivably have an enumeration for extension kind and then
+have a single function for full paths, that just takes in the
+extension kind, archetype etc. This would replace the proliferation of
+"full path for XYZ".
+
+We also have the concept of inclusion paths. We should generalise this
+to just "relative paths" and have a "add project directory?" flag.
+
+*** Name all project paths according to a scheme                      :story:
+
+The locator API looks really confusing due to the various kinds of
+paths. We need to catalogue them all and name them properly.
+
+- output directory: directory into which knitter will write all files,
+  unless "c++ headers output directory" is set, in which case it will
+  write all files except for the headers.
+- c++ headers output directory: directory in which knitter will write
+  the headers. Only applicable to c++.
+- include directory: aka inclusion directory; directory to place in
+  the include path.
 
 *** STARTED Add C++-03 mode                                            :epic:
     CLOCK: [2017-03-08 Wed 23:32]--[2017-03-08 Wed 23:50] =>  0:18
